Added new teleoperated follow_color

--- a/follow_color/CMakeLists.txt
+++ b/follow_color/CMakeLists.txt
@@ -20,3 +20,12 @@ install(DIRECTORY
   models
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+install(PROGRAMS
+	src/teleop_target.py
+	DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(DIRECTORY launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
