--- a/follow_person/CMakeLists.txt
+++ b/follow_person/CMakeLists.txt
@@ -10,9 +10,10 @@ catkin_package()
 include_directories(${GAZEBO_INCLUDE_DIRS})
 
 add_library(personplugin plugins/person.cc)
-target_link_libraries(personplugin ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
+add_library(polarpersonplugin plugins/polar_person.cc)
+target_link_libraries(personplugin polarpersonplugin ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
 
-install(TARGETS personplugin
+install(TARGETS personplugin polarpersonplugin
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 )
 
